# clear_docs

./: .env.example  .gitignore  Makefile  README.md  docker-compose-dev.yml  pgadmin.yml
backend/: Dockerfile
backend/app/: pyproject.toml
backend/app/alembic/: script.py.mako
backend/app/alembic/versions/: 2023-04-15-00-38_3af776bd5de3.py  2023-04-18-05-24_d3b859337860.py  2023-04-23-02-23_0a069b2716d2.py  2023-05-03-19-50_858adab40e69.py
backend/app/app/: constants.py  main.py
backend/app/app/api/: deps.py
backend/app/app/api/v1/: api.py
backend/app/app/api/v1/endpoints/: auth.py  login.py  openai.py  qdrant.py  user.py
backend/app/app/auth/: JWTBearer.py  auth_schema.py  decode_verify_jwt.py  deps.py  jwks.py
backend/app/app/core/: config.py
backend/app/app/crud/: __init__.py  user_crud.py
backend/app/app/db/: init_db.py
backend/app/app/models/: __init__.py  user_model.py
backend/app/app/schemas/: common_schema.py  response_schema.py  user_schema.py
backend/app/app/utils/: auth_cookies.py  callback.py  chatgpt.py  helpers.py  map_schema.py  neural_searcher.py  query_data.py
caddy/: Caddyfile
easyauth/: test_key.key  test_key.key.key  test_key.key.pub  test_key.pub
frontend/: package-lock.json  package.json
frontend/components/: chat-message.tsx  chat-room.tsx
frontend/config/: appInfo.ts  backendConfig.ts  frontendConfig.tsx
frontend/pages/: index.tsx
pgadmin/: servers.json
