[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["jonra1993 <jon_ra@hotmail.es>"]
readme = "README.md"

[tool.black]
line-length = 88
target-version = [ "py37", "py38", "py39",]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.ruff]
line-length = 88
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B904",
    "B006",    
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.poetry.dependencies]
python = "^3.10"
aioredis = "^2.0.1"
alembic = "^1.9.2"
asyncer = "^0.0.2"
asyncpg = "^0.27.0"
cryptography = "^39.0.0"
httpx = "^0.23.3"
passlib = "^1.7.4"
pillow = "^9.4.0"
python-jose = "^3.3.0"
sqlalchemy = "1.4.41"
sqlmodel = "^0.0.8"
watchfiles = "^0.18.1"
fastapi-async-sqlalchemy = "^0.3.12"
sqlalchemy-utils = "^0.39.0"
fastapi = {extras = ["all"], version = "^0.95.1"}
fastapi-cache2 = {extras = ["redis"], version = "^0.2.0"}
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.11.2"}
redis = "^4.4.2"
botocore = "^1.29.76"
boto3 = "^1.26.76"
twilio = "^7.16.4"
celery = "^5.2.7"
celery-sqlalchemy-scheduler = "^0.3.0"
psycopg2-binary = "^2.9.5"
jinja2= "3.1.2"
emails = "^0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
black = "^23.1.0"
ruff = "^0.0.241"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
